--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
   },
@@ -24,7 +27,11 @@
     "@babel/preset-env": "^7.5.4",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.2.6",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
     "webpack-dev-server": "^3.7.2"
   }
 }
