--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node src/server/index.js",
     "build": "webpack",
     "build-prod": "webpack --config webpack.prod.js",
@@ -29,6 +29,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.2.6",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^27.0.4",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
